--- a/app/src/main/res/layout/fragment_video_detail.xml
+++ b/app/src/main/res/layout/fragment_video_detail.xml
@@ -1,12 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.videodetail.VideoDetailFragment">
 
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/videoPlayerHolder"
+        android:layout_width="match_parent"
+        android:layout_height="320dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@color/black"
+        app:layout_constraintTop_toTopOf="parent">
 
+        <com.google.android.exoplayer2.ui.PlayerView
+            android:id="@+id/videoPlayer"
+            android:layout_width="match_parent"
+            android:layout_height="320dp"
+            app:layout_constrainedHeight="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:resize_mode="fill"
+            app:shutter_background_color="@color/white"
+            app:surface_type="texture_view" />
+
+        <ImageView
+            android:id="@+id/imgPlayPause"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:adjustViewBounds="true"
+            android:background="#ff0000"
+            android:scaleType="centerInside"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/imgNext"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_marginStart="24dp"
+            android:adjustViewBounds="true"
+            android:background="#ff0000"
+            android:scaleType="centerInside"
+            app:layout_constraintBottom_toBottomOf="@id/imgPlayPause"
+            app:layout_constraintStart_toEndOf="@id/imgPlayPause"
+            app:layout_constraintTop_toTopOf="@id/imgPlayPause" />
+
+        <ImageView
+            android:id="@+id/imgPrevious"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:adjustViewBounds="true"
+            android:layout_marginEnd="24dp"
+            app:layout_constraintBottom_toBottomOf="@id/imgPlayPause"
+            app:layout_constraintEnd_toStartOf="@id/imgPlayPause"
+            app:layout_constraintTop_toTopOf="@id/imgPlayPause"
+            android:background="#ff0000"
+            android:scaleType="centerInside" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constrainedHeight="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/videoPlayerHolder">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/txtVideoTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/video_detail_title_margin"
+                android:text="My Cool Video Title"
+                android:textColor="@color/video_detail_title_color"
+                android:textSize="@dimen/video_detail_title_text_size" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/txtVideoAuthor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/video_detail_title_margin"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="@dimen/video_detail_title_margin"
+                android:text="videoAuthor"
+                android:textColor="@color/video_detail_author_color"
+                android:textSize="@dimen/video_detail_author_text_size" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/txtVideoDescription"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/video_detail_title_margin"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="@dimen/video_detail_title_margin"
+                android:text="videoDescription"
+                android:textColor="@color/video_detail_description_color"
+                android:textSize="@dimen/video_detail_description_text_size" />
+
+        </LinearLayout>
+    </ScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
