--- a/app/src/main/res/layout/fragment_video_detail.xml
+++ b/app/src/main/res/layout/fragment_video_detail.xml
@@ -11,9 +11,9 @@
         android:id="@+id/videoPlayerHolder"
         android:layout_width="match_parent"
         android:layout_height="320dp"
+        android:background="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:background="@color/black"
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.exoplayer2.ui.PlayerView
@@ -25,44 +25,52 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:resize_mode="fill"
-            app:shutter_background_color="@color/white"
+            app:shutter_background_color="#4f4f4f"
             app:surface_type="texture_view" />
 
-        <ImageView
+        <com.caverock.androidsvg.SVGImageView
             android:id="@+id/imgPlayPause"
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:adjustViewBounds="true"
-            android:background="#ff0000"
-            android:scaleType="centerInside"
+            android:background="@drawable/round_background_with_stroke"
+            android:padding="18dp"
+            android:scaleType="fitCenter"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="100"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="100"
+            app:svg="play.svg" />
 
-        <ImageView
+        <com.caverock.androidsvg.SVGImageView
             android:id="@+id/imgNext"
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:layout_marginStart="24dp"
             android:adjustViewBounds="true"
-            android:background="#ff0000"
-            android:scaleType="centerInside"
+            android:background="@drawable/round_background_with_stroke"
+            android:padding="18dp"
+            android:scaleType="fitCenter"
             app:layout_constraintBottom_toBottomOf="@id/imgPlayPause"
             app:layout_constraintStart_toEndOf="@id/imgPlayPause"
-            app:layout_constraintTop_toTopOf="@id/imgPlayPause" />
+            app:layout_constraintTop_toTopOf="@id/imgPlayPause"
+            app:svg="next.svg" />
 
-        <ImageView
+        <com.caverock.androidsvg.SVGImageView
             android:id="@+id/imgPrevious"
             android:layout_width="64dp"
             android:layout_height="64dp"
-            android:adjustViewBounds="true"
             android:layout_marginEnd="24dp"
+            android:adjustViewBounds="true"
+            android:background="@drawable/round_background_with_stroke"
+            android:padding="18dp"
+            android:scaleType="fitCenter"
             app:layout_constraintBottom_toBottomOf="@id/imgPlayPause"
             app:layout_constraintEnd_toStartOf="@id/imgPlayPause"
             app:layout_constraintTop_toTopOf="@id/imgPlayPause"
-            android:background="#ff0000"
-            android:scaleType="centerInside" />
+            app:svg="previous.svg" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
