--- a/app/src/main/res/layout/fragment_video_detail.xml
+++ b/app/src/main/res/layout/fragment_video_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.videodetail.VideoDetailFragment">
+    tools:context=".view.videodetail.VideoDetailFragment">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
